@@ -20,7 +20,10 @@ Version dev
     * itwp.album.tAnno - From Beta to Stable
     * itwp.album.tEtichetta - Add at RC stage
     * itwp.album.tGenere - From Beta to Stable
-    * tplckr - Add (only for Album now)
+    * tplckr - Create a template checker
+    * tplckr.itwp.album.pTipo - Created
+    * tplckr.itwp.album.pAnno - Created
+    * tplckr.itwp.album.pGenere - Created
 
 Version 5.0 (11/03/2012)
     * itwp.operaarte add tMateriale
